# llm-dataset

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
examples/: example.ipynb  gsm8k.ipynb  multiarith.ipynb
notebook/: test.ipynb  test2.ipynb
src/llmdataset/: main.py
src/llmdataset/dataset/: aquarat.py  arc.py  bigbench.py  bigbenchhard.py  csqa.py  gpqa.py  gsm8k.py  svamp.py
