[tool.poetry]
name = "llm-dataset"
version = "0.1.0"
description = ""
authors = ["toma tanaka <ulti4929@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_dataset"}]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.28.0"
datasets = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
